--- a/A_00/greeting.html
+++ b/A_00/greeting.html
@@ -10,6 +10,10 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 
 <html lang="de">
 
+<!-- Hatte Probleme beim Erstellen der TS-Datei. Habe alle nötigen Haken bei Preferences gesetzt. 
+Aber Eclipse erstellt mir keine .js und .jsmap. Habe deshalb selbst eine .js Datei erstellt, 
+damit die Website funktioniert. -->
+
 <head>
 <meta charset="UTF-8">
 <meta name="author" content="Nadine Limberger">
