--- a/A_00/A_00_Greeting.html
+++ b/A_00/A_00_Greeting.html
@@ -10,12 +10,12 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde n
 
 <html lang="de">
 
-<!-- Hatte Probleme beim Erstellen der TS-Datei. Habe alle nötigen Haken bei Preferences gesetzt. 
+<!-- Hatte Probleme beim Erstellen der TS-Datei. Habe alle nÃ¶tigen Haken bei Preferences gesetzt. 
 Aber Eclipse erstellt mir keine .js und .jsmap. Habe deshalb selbst eine .js Datei erstellt, 
 damit die Website funktioniert. -->
 
 <head>
-<meta charset="iso-8859-1">
+<meta charset="utf-8">
 <meta name="author" content="Nadine Limberger">
 <title>Aufgabe 0</title>
 <link rel="stylesheet" type="text/css" href="style.css">
