--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -14,5 +14,8 @@ body {
 </head>
 <body>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+<a href="https://limbergn.github.io/EIA2/A_00/A_00_Greeting.html" target="_blank">Aufgabe_0 | 20.03.2017</a>
+<a href="https://github.com/limbergn/EIA2" target="_blank">Repository</a>
+<a href="https://limbergn.github.io/" target="_blank">GitHub Userpage</a>
 </body>
 </html>
