--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -14,6 +14,7 @@ body {
 </head>
 <body>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+<a href="https://limbergn.github.io/EIA2/A_01/Aufgabe-1-Tracetable.pdf" target="_blank">Aufgabe_1 | 23.03.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_00/A_00_Greeting.html" target="_blank">Aufgabe_0 | 20.03.2017</a><br>
 <a href="https://github.com/limbergn/EIA2" target="_blank">Repository</a><br>
 <a href="https://limbergn.github.io/" target="_blank">GitHub Userpage</a>
