--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -14,6 +14,8 @@ body {
 </head>
 <body>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+<a href="https://limbergn.github.io/EIA2/A_02/Aufgabe-2b-02.04.2017.pdf" target="_blank">Aufgabe_2b | 02.04.2017</a><br>
+<a href="https://limbergn.github.io/EIA2/A_02/Aufgabe-2a-DynamicHTML.html" target="_blank">Aufgabe_2a | 02.04.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_02/Konzept_02.pdf" target="_blank">Konzept_01 | 30.03.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_01/Aufgabe-1-Tracetable.pdf" target="_blank">Aufgabe_1 | 23.03.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_00/A_00_Greeting.html" target="_blank">Aufgabe_0 | 20.03.2017</a><br>
