--- a/A_02/Aufgabe-2a-DynamicHTML.html
+++ b/A_02/Aufgabe-2a-DynamicHTML.html
@@ -11,7 +11,7 @@
 <meta charset="utf-8">
 <meta name="author" content="Nadine Limberger">
 <title>Aufgabe 2</title>
-<link rel="stylesheet" type="text/css" href="style-a.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <script type="text/javascript" src="rice.js"></script>
 </head>
 
