--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -15,6 +15,8 @@ body {
 <body>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 
+<a href="https://limbergn.github.io/EIA2/A_03/maumau.html" target="_blank">Aufgabe_03b | 10.04.2017</a><br>
+<a href="https://limbergn.github.io/EIA2/A_03/chess.html" target="_blank">Aufgabe_03a | 10.04.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_03/Konzept_03.png" target="_blank">Konzept_03 | 06.04.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_02/A_02b.jpg" target="_blank">Aufgabe_2b | 02.04.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_02/Aufgabe-2a-DynamicHTML.html" target="_blank">Aufgabe_2a | 02.04.2017</a><br>
