--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -15,6 +15,7 @@ body {
 <body>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 
+<a href="https://limbergn.github.io/EIA2/A_04/Konzept_04.pdf" target="_blank">Konzept_4 | 13.04.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_03/maumau.html" target="_blank">Aufgabe_03b | 10.04.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_03/chess.html" target="_blank">Aufgabe_03a | 10.04.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_03/Konzept_03.png" target="_blank">Konzept_03 | 06.04.2017</a><br>
