--- a/A_03/maumau.html
+++ b/A_03/maumau.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-<!-- Aufgabe 2a
+<!-- Aufgabe 3.2
 	Name:Nadine Limberger
 	Matrikelnr.: 255346
 	Datum: 30.03.2017
 	Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde nicht kopiert und auch nicht diktiert. -->
 
+<html>
+
 <head>
-<meta charset="UTF-8">
-<title>Aufgabe 3</title>
-<link rel="stylesheet" href="style.css">
-<script type="text/javascript" src="maumau.js"></script>
+  <meta charset="utf-8">
+  <script src="maumau.js"></script>
+ <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	<div id="ziehstapel"></div>
-	<div id="ablegstapel"></div>
-	<div id="handkarten">
-		<div class="handkarten"></div>
-		<div class="handkarten"></div>
-		<div class="handkarten"></div>
-		<div class="handkarten"></div>
-		<div class="handkarten"></div>
-	</div>
+
+	<div id="deck">  </div>
+	
+	
+	<div class="Handkarten"></div>
+	<div class="Handkarten"></div>
+	<div class="Handkarten"></div>
+	<div class="Handkarten"></div>
+	<div class="Handkarten"></div>
+	
+	<div id="discard"></div>
 </body>
+
 </html>
