--- a/A_03/maumau.html
+++ b/A_03/maumau.html
@@ -5,26 +5,19 @@
 	Datum: 30.03.2017
 	Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde nicht kopiert und auch nicht diktiert. -->
 
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <script src="maumau.js"></script>
- <link rel="stylesheet" href="style.css">
-</head>
-
+<html lang="De">
+	<head>
+		<title> Aufgabe 3 </title>
+		<meta charset="utf-8">
+		<script src="maumau.js"></script>
+		<link rel=stylesheet type="text/css" href="style.css">
+	</head>
 <body>
 
-	<div id="deck">  </div>
-	
-	
-	<div class="Handkarten"></div>
-	<div class="Handkarten"></div>
-	<div class="Handkarten"></div>
-	<div class="Handkarten"></div>
-	<div class="Handkarten"></div>
-	
-	<div id="discard"></div>
-</body>
+			<div id="take"></div>
+			<div id="drop"></div>
+			<div id="hand"></div>
 
-</html>
+</body>	
+
+</html>	
