--- a/A_03/maumau.html
+++ b/A_03/maumau.html
@@ -6,12 +6,12 @@
 	Datum: 30.03.2017
 	Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde nicht kopiert und auch nicht diktiert. -->
 
-<html lang="De">
+<html lang="de">
 <head>
 <title>Aufgabe 3</title>
 <meta charset="utf-8">
 <script src="maumau.js"></script>
-<link rel=stylesheet type="text/css" href="style.css">
+<link rel=stylesheet type="text/css" href="styles.css">
 </head>
 
 <body>
