--- a/A_03/maumau.html
+++ b/A_03/maumau.html
@@ -11,7 +11,7 @@
 <title>Aufgabe 3</title>
 <meta charset="utf-8">
 <script src="maumau.js"></script>
-<link rel=stylesheet type="text/css" href="styles.css">
+<link rel=stylesheet type="text/css" href="style.css">
 </head>
 
 <body>
