--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html> <head>
 <meta charset="utf-8" />
 <title>Steckbrief</title>
 <style>
@@ -9,7 +8,6 @@ body {
 	font-size: small;
 	background: #eeeee
 }
-
 </style>
 </head>
 <body>
