--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -13,7 +13,7 @@ body {
 <body>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 
-<a href="https://limbergn.github.io/EIA2/A_07/Konzept_07" target="_blank">Konzept-7 | 11.05.2017</a><br>
+<a href="https://limbergn.github.io/EIA2/A_07/Konzept-07" target="_blank">Konzept_7 | 11.05.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_06/studiVZ.html" target="_blank">Aufgabe_6 | 06.05.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_06/wiese.html" target="_blank">Aufgabe_6 | 06.05.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_05/bienenschwarm.html" target="_blank">Aufgabe_5 | 29.04.2017</a><br>
