--- a/steckbrief.htm
+++ b/steckbrief.htm
@@ -13,6 +13,7 @@ body {
 <body>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 
+<a href="https://limbergn.github.io/EIA2/A_08/Konzept_08.pdf" target="_blank">Aufgabe_8 | 17.05.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_07/blumenwiese.html" target="_blank">Aufgabe_7 | 14.05.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_07/Konzept-07.pdf" target="_blank">Konzept_7 | 11.05.2017</a><br>
 <a href="https://limbergn.github.io/EIA2/A_06/studiVZ.html" target="_blank">Aufgabe_6 | 06.05.2017</a><br>
